impl/examples/errors/invalid_binary_operation.ryu
let a = 1 + "hello"
